--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -142,10 +142,10 @@
           <h3>Lorem Ipsum</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet blanditiis incidunt iusto corrupti illum
             cum laudantium ex sequi amet.</p>
-          <a href="about.html" class="btn btn-outline-dark btn-lg">Learn More</a>
+          <a href="about.html" class="btn btn-outline-info btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
-          <img src="img/laptop.png" alt="" class="img-fluid">
+          <img src="img/healthy-apple-fruits-natural-102104.jpg" alt="" class="img-fluid">
         </div>
       </div>
     </div>
