--- a/episcea/index.html
+++ b/episcea/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-info">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Episcea</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,7 +27,7 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="about.html" class="nav-link">About Us</a>
+            <a href="about.html" class="nav-link">A Propos</a>
           </li>
           <li class="nav-item">
             <a href="services.html" class="nav-link">Services</a>
@@ -55,10 +55,10 @@
         <div class="carousel-item carousel-image-1 active">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading One</h1>
+              <h1 class="display-3">Titre</h1>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
                 quod aliquid inventore vero perspiciatis.</p>
-              <a href="#" class="btn btn-info btn-lg">Sign Up Now</a>
+              <a href="#" class="btn btn-info btn-lg">S'inscrire</a>
             </div>
           </div>
         </div>
@@ -66,10 +66,10 @@
         <div class="carousel-item carousel-image-2">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
-              <h1 class="display-3">Heading Two</h1>
+              <h1 class="display-3">Titre</h1>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
                 quod aliquid inventore vero perspiciatis.</p>
-              <a href="#" class="btn btn-info btn-lg">Learn More</a>
+              <a href="#" class="btn btn-info btn-lg">En savoir plus</a>
             </div>
           </div>
         </div>
@@ -77,10 +77,10 @@
         <div class="carousel-item carousel-image-3">
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
-              <h1 class="display-3">Heading Three</h1>
+              <h1 class="display-3">HeTitre</h1>
               <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis ratione
                 quod aliquid inventore vero perspiciatis.</p>
-              <a href="#" class="btn btn-info btn-lg">Learn More</a>
+              <a href="#" class="btn btn-info btn-lg">En savoir plus</a>
             </div>
           </div>
         </div>
@@ -101,18 +101,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cog fa-3x mb-2"></i>
-          <h3>Turning Gears</h3>
+          <i class="fas fa-tree fa-3x mb-2"></i>
+          <h3>Une idée</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
-          <i class="fas fa-cloud fa-3x mb-2"></i>
-          <h3>Sending Data</h3>
+          <i class="fas fa-truck fa-3x mb-2"></i>
+          <h3>Une épicerie</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
         <div class="col-md-4 mb-4 text-center">
           <i class="fas fa-cart-plus fa-3x mb-2"></i>
-          <h3>Making Money</h3>
+          <h3>Une action</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
       </div>
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="col">
           <div class="container pt-5">
-            <h1>Are You Ready To Get Started?</h1>
+            <h1>Comment participer?</h1>
             <p class="d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est eaque magni sit dolores. Nisi, dolor nam modi perspiciatis
               consequatur soluta.</p>
           </div>
@@ -157,10 +157,10 @@
       <div class="row">
         <div class="col">
           <div class="container p-5">
-            <a href="#" class="video" data-video="https://www.youtube.com/embed/HnwsG9a5riA" data-toggle="modal" data-target="#videoModal">
+            <a href="#" class="video" data-video="" data-toggle="modal" data-target="#videoModal">
               <i class="fas fa-play fa-3x"></i>
             </a>
-            <h1>See What We Do</h1>
+            <h1>Ce que nous faisons</h1>
           </div>
         </div>
       </div>
@@ -174,46 +174,46 @@
       <p class="text-center">Check out our photos</p>
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery" data-height="560"
+          <a href="/img/Anna.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="560"
             data-width="560">
-            <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid">
+            <img src="/img/Anna.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery" data-height="561"
+          <a href="/img/Clothilde.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="561"
             data-width="561">
-            <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid">
+            <img src="/img/Clothilde.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery" data-height="562"
+          <a href="/img/Estelle.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="562"
             data-width="562">
-            <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid">
+            <img src="/img/Estelle.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
 
       <div class="row mb-4">
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery" data-height="563"
+          <a href="/img/Lucie.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="563"
             data-width="563">
-            <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid">
+            <img src="/img/Lucie.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery" data-height="564"
+          <a href="/img/Thelma.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="564"
             data-width="564">
-            <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid">
+            <img src="/img/Thelma.jpg" alt="" class="img-fluid">
           </a>
         </div>
 
         <div class="col-md-4">
-          <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery" data-height="565"
+          <a href="/img/Zoé.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="565"
             data-width="565">
-            <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid">
+            <img src="/img/Zoé.jpg" alt="" class="img-fluid">
           </a>
         </div>
       </div>
@@ -221,7 +221,7 @@
   </section>
 
   <!-- NEWSLETTER -->
-  <section id="newsletter" class="text-center p-5 bg-info text-white">
+  <section id="newsletter" class="text-center p-5 bg-dark text-white">
     <div class="container">
       <div class="row">
         <div class="col">
@@ -244,7 +244,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Glozzom</p>
+            <span id="year"></span> Episcea</p>
         </div>
       </div>
     </div>
