--- a/episcea/about.html
+++ b/episcea/about.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-info">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Episcea</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -49,7 +49,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 m-auto text-center">
-          <h1>About Us</h1>
+          <h1>A Propos d'EPISCEA</h1>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
         </div>
       </div>
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1>What We Do</h1>
+          <h1>Nos activités</h1>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, fuga eaque. Amet, assumenda aliquid tempore dolorum
             error eveniet doloribus sed repellat quod, dolores fuga ipsam soluta. Aliquam accusantium pariatur aut sint deleniti
             laborum ducimus voluptatem? Architecto cumque quod suscipit officiis soluta, voluptate dicta blanditiis similique
@@ -72,7 +72,7 @@
             praesentium temporibus adipisci debitis labore!</p>
         </div>
         <div class="col-md-6">
-          <img src="https://source.unsplash.com/random/700x700/?technology" alt="" class="img-fluid rounded-circle d-none d-md-block about-img">
+          <img src="/img/episcea.jpg" alt="" class="img-fluid rounded-circle d-none d-md-block about-img">
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
           <div class="card bg-dark text-white text-center">
             <div class="card-body">
               <i class="fas fa-building fa-3x"></i>
-              <h3>Sample Heading</h3>
+              <h3>Extrait</h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
             </div>
           </div>
@@ -95,7 +95,7 @@
           <div class="card bg-info text-white text-center">
             <div class="card-body">
               <i class="fas fa-bullhorn fa-3x"></i>
-              <h3>Sample Heading</h3>
+              <h3>Extrait</h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
             </div>
           </div>
@@ -104,7 +104,7 @@
           <div class="card bg-dark text-white text-center">
             <div class="card-body">
               <i class="fas fa-comments fa-3x"></i>
-              <h3>Sample Heading</h3>
+              <h3>Extrait</h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
             </div>
           </div>
@@ -115,8 +115,8 @@
         <div class="col-md-4">
           <div class="card bg-info text-white text-center">
             <div class="card-body">
-              <i class="fas fa-box fa-3x"></i>
-              <h3>Sample Heading</h3>
+              <i class="fas fa-recycle fa-3x"></i>
+              <h3>Extrait</h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
             </div>
           </div>
@@ -125,7 +125,7 @@
           <div class="card bg-dark text-white text-center">
             <div class="card-body">
               <i class="fas fa-credit-card fa-3x"></i>
-              <h3>Sample Heading</h3>
+              <h3>Extrait</h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
             </div>
           </div>
@@ -134,7 +134,7 @@
           <div class="card bg-info text-white text-center">
             <div class="card-body">
               <i class="fas fa-coffee fa-3x"></i>
-              <h3>Sample Heading</h3>
+              <h3>Extrait</h3>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
             </div>
           </div>
@@ -144,9 +144,9 @@
   </section>
 
   <!-- TESTIMONIALS -->
-  <section id="testimonials" class="p-4 bg-info text-white">
+  <section id="testimonials" class="p-4 bg-dark text-white">
     <div class="container">
-      <h2 class="text-center">testimonials</h2>
+      <h2 class="text-center">Témoignage</h2>
       <div class="row text-center">
         <div class="col">
           <div class="slider">
@@ -155,8 +155,8 @@
                 <p class="mb-0">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
                 </p>
-                <footer class="blockquote-footer">John Doe From
-                  <cite title="Company 1">Company 1</cite>
+                <footer class="blockquote-footer">Léa de
+                  <cite title="Uni">l'Université de Lille 2</cite>
                 </footer>
               </blockquote>
             </div>
@@ -165,8 +165,8 @@
                 <p class="mb-0">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
                 </p>
-                <footer class="blockquote-footer">Sam Smith From
-                  <cite title="Company 2">Company 2</cite>
+                <footer class="blockquote-footer">Alice de
+                  <cite title="Uni">l'Université de Lille 2</cite>
                 </footer>
               </blockquote>
             </div>
@@ -175,8 +175,8 @@
                 <p class="mb-0">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
                 </p>
-                <footer class="blockquote-footer">Meghan Williams From
-                  <cite title="Company 3">Company 3</cite>
+                <footer class="blockquote-footer">Pierre Jean de
+                  <cite title="Uni">l'Université de Lille 2</cite>
                 </footer>
               </blockquote>
             </div>
@@ -192,7 +192,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Glozzom</p>
+            <span id="year"></span> Episcea</p>
         </div>
       </div>
     </div>
