--- a/episcea/contact.html
+++ b/episcea/contact.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-info">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Glozzom</a>
+      <a href="index.html" class="navbar-brand">Episcea</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 m-auto text-center">
-          <h1>Contact Us</h1>
+          <h1>Nous contacter</h1>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, temporibus?</p>
         </div>
       </div>
@@ -61,31 +61,31 @@
         <div class="col-md-4">
           <div class="card p-4">
             <div class="card-body">
-              <h4>Get In Touch</h4>
+              <h4>Entrer en contact</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, odio!</p>
-              <h4>Address</h4>
-              <p>550 Main st, Boston MA</p>
+              <h4>Addresse</h4>
+              <p>1 rue du professeur Laguesse</p>
               <h4>Email</h4>
               <p>test@test.com</p>
-              <h4>Phone</h4>
-              <p>(555) 555-5555</p>
+              <h4>Téléphone</h4>
+              <p>06</p>
             </div>
           </div>
         </div>
         <div class="col-md-8">
           <div class="card p-4">
             <div class="card-body">
-              <h3 class="text-center">Please fill out this form to contact us</h3>
+              <h3 class="text-center">Veuillez remplir ce formulaire pour nous contacter</h3>
               <hr>
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="First Name">
+                    <input type="text" class="form-control" placeholder="Prénom">
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Last Name">
+                    <input type="text" class="form-control" placeholder="Nom">
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Phone Number">
+                    <input type="text" class="form-control" placeholder="Numéro de Téléphone">
                   </div>
                 </div>
               </div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-12">
                   <div class="form-group">
-                    <input type="submit" value="Submit" class="btn btn-outline-dark btn-block">
+                    <input type="submit" value="Envoyer" class="btn btn-outline-info btn-block">
                   </div>
                 </div>
               </div>
@@ -118,35 +118,7 @@
     </div>
   </section>
 
-  <!-- STAFF -->
-  <section id="staff" class="py-5 text-center bg-info text-white">
-    <div class="container">
-      <h1>Our Staff</h1>
-      <hr>
-      <div class="row">
-        <div class="col-md-3">
-          <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>Jane Doe</h4>
-          <small>Marketing Manager</small>
-        </div>
-        <div class="col-md-3">
-          <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>Sara Williams</h4>
-          <small>Business Manager</small>
-        </div>
-        <div class="col-md-3">
-          <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>John Doe</h4>
-          <small>CEO</small>
-        </div>
-        <div class="col-md-3">
-          <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle mb-2">
-          <h4>Steve Smith</h4>
-          <small>Web Developer</small>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
   <!-- FOOTER -->
   <footer id="main-footer" class="text-center p-4">
@@ -154,7 +126,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Glozzom</p>
+            <span id="year"></span> Episcea</p>
         </div>
       </div>
     </div>
